js/src/tests/test262/built-ins/Error/isError/symbols.js
assert
.
sameValue
(
Error
.
isError
(
Symbol
(
)
)
false
)
;
reportCompare
(
0
0
)
;
